@@ -7,6 +7,7 @@ Changes in version 1.3 (TBD)
 - Fixed bug 2116691: Leave network connection open.
 - Fixed bug 3099314: Rotator Thrashing.
 - Fixed bug 2167508: problems in rotator controller.
+- Fixed bug from Ubuntu #706452:Update from local files won't work with files in UPPER case 
 
 Changes in version 1.2 (12 Oct 2010)
 
